fix scrollbar orizzontale

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-html{height: 100%;}
+html{height: 100%; overflow-x: hidden;}
 
 body
 { font-family: "Palatino Linotype", "Book Antiqua", serif, arial, sans-serif;
@@ -6,7 +6,8 @@ body
   margin: 0px;
   font-size: .85em;
   background: #F5F3F0;
-  color: #3D3D3D;}
+  color: #3D3D3D;
+  overflow-x: hidden;}
 
 p
 { margin: 0px;
